Mon Mar 15 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c gtkgame.c: Reorganized about box

Mon Mar 15 07:49:53 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c (PythonInitialise): fix bug for szDir==NULL
	(reported by Joseph Heled)

Sun Mar 14 08:55:39 2004  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkcolour.h: Change broken type for GtkColourPicker::func and
	prototype.

Fri Mar 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkprefs.c, gtkgame.c: Removed texture load errors when in 2d mode

Mon Mar 8 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkcolor.c, gtkprefs.c: Remove "property delete" gtk warning message
		when changin colours

Thu Mar 4 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gnubg.c: Replace USE_OLD_LAYOUT compile flag with menu option
	* gtkboard.c: Crawford flag only changeable when editing

Sun Feb 29 18:17:14 2004  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c: #include <winsock.h> only if WIN32 defined.

Wed Feb 25 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c: Add option so toolbar can show text, icon or both

Wed Feb 25 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c, set.c: Save shown panels
	* gnubg.c : Fixed small show epc bug

Fri Feb 20 15:10:39 CET 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, configure.in: move gnubg.py to scripts.
	* gnubgmodule.c: _MAX_PATH only defined onwintendo.

Thu Feb 19 13:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* import.c: Fixed import jellyfish pos problem (bug 6086)

Thu Feb 19 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* scripts: Added new directory to cvs for python scripts

Wed Feb 18 11:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Remove maximum column size of text copied to
		clipboard from statistics view (Bug 4161).

Mon Feb 16 21:57:18 CET 2004   Joern Thyssen  <jth@gnubg.org> 
